dynamic examples with code

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,14 +13,13 @@
 
 <body>
     <div class="d-flex flex-row">
-        <div class="menu p-2">
-            <button id="home" class="menu-btn btn btn-primary m-2">Towns from velivole.fr, ESPG:4326</button>
-            <button id="klokantech" class="menu-btn btn btn-primary m-2">Borders from klokantech, EPSG:3587</button>
-            <button id="osm" class="menu-btn btn btn-primary m-2">OSM data for Europe from MapTiler, 34.4GB, EPSG:3587</button>
+        <div id="menu" class="menu p-2">
         </div>
-        <div id="main" class="d-flex flex-column">
+        <div id="main" class="d-flex flex-row">
             <div id="example">
             </div>
+            <code id="text" class="language-typescript">
+                </code>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
