improve the css

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,14 +12,18 @@
 </head>
 
 <body>
-    <div class="d-flex flex-row">
+    <div class="d-flex flex-row w-100">
         <div id="menu" class="menu p-2">
         </div>
-        <div id="main" class="d-flex flex-row">
-            <div id="example">
-            </div>
-            <code id="text" class="language-typescript">
+        <div id="main" class="fluid-container w-100 g-0">
+            <div class="row">
+                <div id="example" class="col-12 col-lg-6 g-0 p-1">
+                </div>
+                <div class="col-12 col-lg-6 g-0 p-1 h-100 d-block">
+                    <code id="text" class="language-typescript d-block">
                 </code>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
