add a visual indicator for COOP/COEP

--- a/examples/index.html
+++ b/examples/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="d-flex flex-row w-100">
-        <div id="menu" class="menu p-2">
+        <div id="menu" class="menu p-2 d-flex flex-column">
         </div>
         <div id="main" class="fluid-container w-100 g-0">
             <div class="row">
