add version information

--- a/examples/index.html
+++ b/examples/index.html
@@ -17,14 +17,14 @@
 
 <body>
     <div class="d-flex flex-row w-100">
-        <div id="menu" class="menu p-2 d-flex flex-column">
+        <div id="menu" class="menu p-1 d-flex flex-column">
         </div>
-        <div id="main" class="fluid-container w-100 g-0">
-            <div class="row">
-                <div id="example" class="col-12 col-lg-6 g-0 p-1">
+        <div id="main" class="fluid-container w-100">
+            <div class="row g-0">
+                <div id="example" class="col-12 col-lg-6 p-0">
                     <div id="map"></div>
                 </div>
-                <div class="col-12 col-lg-6 g-0 p-1 h-100 d-block">
+                <div class="col-12 col-lg-6 p-1 h-100 d-block">
                     <code id="text" class="language-typescript d-block">
                 </code>
                 </div>
